k8s-rpi-apps-ingress/immich-ingress/immich-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-shared
  annotations:
    service.cilium.io/global: "true"
  labels:
    app.kubernetes.io/name: proxy
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
  selector:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: proxy
  type: ClusterIP
