k8s-rpi-apps-ingress/immich-ingress/immich-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-shared
  annotations:
    avp.kubernetes.io/path: "k8secrets/ingresses"
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"    
spec:
  ingressClassName: nginx
  rules:
    - host: <immichhostname>.<domainname>
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: immich-shared
              port:
                number: 8080
